Add comments in fluent iterable treatment.