@@ -2,6 +2,7 @@ package org.test.main;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Mazlum
@@ -33,11 +34,15 @@ public class TestFluentIterable {
     final List<Person> persons = Arrays.asList(person1, person2, person3);
 
     // Filters and transforms persons to users.
-    final List<User> users =
-        FluentIterable.from(persons).filter(p -> p.getAge() > 20)
-            .transform(TestFluentIterable::toUser).toList();
+    final List<User> users = FluentIterable.from(persons).filter(p -> p.getAge() > 20)
+        .transform(TestFluentIterable::toUser).toList();
+
+    // Same operation with stream.
+    final List<User> usersWithStream = persons.stream().filter(p -> p.getAge() > 20)
+        .map(TestFluentIterable::toUser).collect(Collectors.toList());
 
     System.out.println("User transform result : " + users);
+    System.out.println("User transform with stream result : " + usersWithStream);
   }
 
   private static User toUser(final Person person) {
